# Bot-Behavior-Analysis-Telegram

./: README.md  environment.yml  makefile  pyproject.toml
src/cypher/: load_behavior.cypher
src/notebooks/: bot_analysis.ipynb  bot_detection.ipynb  viz_and_cleaning.ipynb
src/util/: bot_filtering.py  evaluate.py  load_graph.py
